--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "imask": "^7.6.1",
     "swiper": "^11.2.10",
     "vue": "^3.5.18"
   },
